Fim do projeto da atividade extensionista

--- a/index.html
+++ b/index.html
@@ -2,19 +2,25 @@
 <html lang="pt-BR">
 
 <head>
+
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
   <title>Juventude em Movimento</title>
+
   <link rel="stylesheet" href="assets/css/style.css">
+  <link rel="shortcut icon" href="assets/img/favicon.png" type="image/x-icon">
+
 </head>
 
 <body>
 
   <header class="header-bg">
-    <div class="header-conteudo container">
+    <div class="header-conteudo">
       <picture class="logo">
         <a href="#home"><img src="assets/img/logo.svg" width="143" height="48" alt="Juventude em Movimento"></a>
       </picture>
+
       <nav id="nav">
         <button id="btn-mobile" class="btn-mobile" aria-label="Abrir Menu" aria-haspopup="true" aria-controls="menu" aria-expanded="false"><span class="hamburger"></span>
         </button>
@@ -31,16 +37,17 @@
 
   <main>
     <article id="home" class="intro-bg">
-      <div class="intro-conteudo container">
+      <div class="intro-conteudo">
         <h1>
           O esporte como ferramenta de
           transformação social para crianças
           e adolescentes<span>.</span>
         </h1>
+
         <div class="form-box">
           <span class="titulo">É professor de Ed. Física?</span>
           <p class="mensagem">Seja voluntário e transforme vidas através do esporte.</p>
-          <form action="" method="post">
+          <form action="" method="get">
             <label for="nome">Nome</label>
             <input type="text" name="nome">
             <label for="email">E-mail</label>
@@ -52,26 +59,31 @@
     </article>
   </main>
 
-  <article id="sobre" class="sobre-conteudo container">
+  <article id="sobre" class="sobre-conteudo">
     <h2 class="titulo">Sobre Nós<span>.</span></h2>
+
     <div class="sobre-descricao1">
       <div class="sobre-item">
         <h3>Quem Somos<span>.</span></h3>
         <p>No coração de Campinas - SP, nasceu o projeto <strong>Juventude em Movimento</strong>, com a missão de transformar a vida de crianças e adolescentes das comunidades carentes e promover a inclusão social através do esporte. A ideia surgiu a partir de uma conversa com amigos, e acreditamos no potencial do esporte como ferramenta de evolução e transformação na vida das crianças e adolescentes.</p>
       </div>
+
       <div class="sobre-item">
         <h3>Nossa Missão<span>.</span></h3>
         <p>Nossa missão é oferecer uma oportunidade enriquecedora para jovens que enfrentam condições adversas. Acreditamos que o esporte pode trazer benefícios para o amanhã desses jovens, promovendo o desenvolvimento físico, emocional e social. Queremos proporcionar um ambiente seguro e acolhedor onde cada um possa explorar seu potencial, aprender novos valores e construir um futuro melhor.</p>
       </div>
+
       <picture class="sobre-img">
         <img src="assets/img/sobre-img.jpg" alt="Professor e Aluno praticando Tênis">
       </picture>
     </div>
+
     <div class="sobre-descricao2">
       <div class="sobre-item">
         <h3>Nossa Visão<span>.</span></h3>
         <p>Sonhamos com uma comunidade onde todos os jovens, independentemente de sua origem ou condição financeira, tenham acesso a oportunidades que possam mudar suas vidas para melhor. Através de programas de esportes e atividades educacionais, buscamos preparar nossas crianças e adolescentes para um futuro promissor e livre dos riscos associados à exclusão social.</p>
       </div>
+
       <div class="sobre-item">
         <h3>Nossos Valores<span>.</span></h3>
         <ul>
@@ -81,6 +93,7 @@
           <li><span class="valor-item">Colaboração<span>:</span></span> Trabalhamos juntos com a comunidade, voluntários e parceiros para alcançar nossos objetivos.</li>
         </ul>
       </div>
+
       <picture class="sobre-img">
         <img src="assets/img/sobre-img2.jpg" alt="Crianças Jogando Vôlei de Areia">
       </picture>
@@ -88,12 +101,14 @@
   </article>
 
   <article id="projeto" class="projeto-bg">
-    <div class="projeto-conteudo container">
+    <div class="projeto-conteudo">
       <h2 class="titulo">O Projeto<span>.</span></h2>
+
       <div class="projeto-descricao">
         <h3>O Que Fazemos<span>.</span></h3>
         <p>O projeto Juventude em Movimento, juntamente de professores de Educação Física e demais voluntários, levam para os jovens a oportunidade de desenvolver habilidades esportivas, que somadas a um ambiente acolhedor e de inclusão, podem transformar a realidade de cada um deles e lhes proporcionar um futuro melhor.</p>
       </div>
+
       <div class="projeto-descricao">
         <h3>Nossos Programas<span>.</span></h3>
         <ul>
@@ -103,6 +118,7 @@
           <li><span class="programa-item">Eventos Comunitários</span><span>:</span> Realizamos eventos para envolver a comunidade e celebrar as conquistas dos nossos jovens, criando um senso de pertencimento e orgulho.</li>
         </ul>
       </div>
+
       <div class="projeto-descricao">
         <h3>Como Participar<span>.</span></h3>
         <p>Você pode se envolver de várias maneiras: tornando-se um voluntário, doando recursos, ou simplesmente ajudando a divulgar nosso trabalho. Sua participação é crucial para que possamos continuar transformando vidas através do esporte. Entre em contato conosco para saber como ajudar.</p>
@@ -110,29 +126,35 @@
     </div>
   </article>
 
-  <article id="atividades" class="atividades-conteudo container">
+  <article id="atividades" class="atividades-conteudo">
     <h2 class="titulo">Atividades<span>.</span></h2>
+
     <div class="atividades-imagens">
       <picture>
         <h3>Musica</h3>
         <img src="assets/img/atividades1.jpg" alt="Criança tocando teclado">
       </picture>
+
       <picture>
         <h3>Corrida</h3>
         <img src="assets/img/atividades2.jpg" alt="Jovens correndo">
       </picture>
+
       <picture>
         <h3>Futebol</h3>
         <img src="assets/img/atividades3.jpg" alt="Criança sendo auxiliada pelo professor em campo de futebol">
       </picture>
+
       <picture>
         <h3>Oficinas</h3>
         <img src="assets/img/atividades4.jpg" alt="Criança em uma oficina de artesanato">
       </picture>
+
       <picture>
         <h3>Tênis</h3>
         <img src="assets/img/atividades5.jpg" alt="Professor auxiliando aluno na prática de Tênis">
       </picture>
+
       <picture>
         <h3>Natação</h3>
         <img src="assets/img/atividades6.jpg" alt="Jovens em posição de largada na piscina olímpica">
@@ -143,6 +165,7 @@
   <footer id="contato" class="footer-bg">
     <div class="footer">
       <img src="/assets/img/logo.svg" alt="Juventude em Movimento">
+
       <div class="footer-contato">
         <h3>Contato</h3>
         <ul>
@@ -151,6 +174,7 @@
           <li>Rua da Esperança, 1360 - Jd. do Lago</li>
           <li>Campinas - SP</li>
         </ul>
+
         <div class="footer-redes">
           <a href="./">
             <img src="assets/img/instagram.svg" alt="Instagram">
@@ -163,10 +187,12 @@
           </a>
         </div>
       </div>
+
       <div class="footer-informacoes">
         <h3>Informações</h3>
         <nav>
           <ul>
+            <li><a href="#home">Inicio</a></li>
             <li><a href="#sobre">Sobre Nós</a></li>
             <li><a href="#projeto">O Projeto</a></li>
             <li><a href="#atividades">Atividades</a></li>
@@ -174,11 +200,13 @@
           </ul>
         </nav>
       </div>
-      <p class="footer-copy">Juventude em Movimento 2024 © Todos os direitos reservados.</p>
+      
+      <p class="footer-copy">Copyright 2024 © Todos os direitos reservados.</p>
     </div>
   </footer>
 
   <script src="assets/js/script.js"></script>
+
 </body>
 
 </html>
