--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
 
   <footer id="contato" class="footer-bg">
     <div class="footer">
-      <img src="/assets/img/logo.svg" alt="Juventude em Movimento">
+      <img src="assets/img/logo.svg" alt="Juventude em Movimento">
 
       <div class="footer-contato">
         <h3>Contato</h3>
@@ -197,7 +197,7 @@
         </nav>
       </div>
       
-      <p class="footer-copy">Copyright 2024 © Todos os direitos reservados.</p>
+      <p class="footer-copy">Copyright 2025 © Todos os direitos reservados.</p>
     </div>
   </footer>
 
